--- a/index.html
+++ b/index.html
@@ -1,1 +1,115 @@
-Es geeeeeht!
+<!DOCTYPE html>
+<html>
+<head>
+<!--[if IE]>
+<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+<![endif]-->
+<meta charset="utf-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<link rel="stylesheet" href="http://netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.min.css">
+<link rel="stylesheet" href="http://blueimp.github.io/Gallery/css/blueimp-gallery.min.css">
+<link rel="stylesheet" href="css/bootstrap-image-gallery.min.css">
+</head>
+
+<body>
+
+<h1>My First Heading</h1>
+
+<p>My first paragraph.</p>
+
+<div class="container">
+    <h1>Bootstrap Image Gallery Demo</h1>
+    <form class="form-inline">
+        <div class="form-group">
+            <button id="video-gallery-button" type="button" class="btn btn-success btn-lg">
+                <i class="glyphicon glyphicon-film"></i>
+                Launch Video Gallery
+            </button>
+        </div>
+        <div class="form-group">
+            <button id="image-gallery-button" type="button" class="btn btn-primary btn-lg">
+                <i class="glyphicon glyphicon-picture"></i>
+                Launch Image Gallery
+            </button>
+        </div>
+        <div class="btn-group" data-toggle="buttons">
+          <label class="btn btn-success btn-lg">
+            <i class="glyphicon glyphicon-leaf"></i>
+            <input id="borderless-checkbox" type="checkbox"> Borderless
+          </label>
+          <label class="btn btn-primary btn-lg">
+            <i class="glyphicon glyphicon-fullscreen"></i>
+            <input id="fullscreen-checkbox" type="checkbox"> Fullscreen
+          </label>
+        </div>
+    </form>
+    <br>
+    <!-- The container for the list of example images -->
+    <div id="links"></div>
+    <br>
+</div>
+
+<!-- The Bootstrap Image Gallery lightbox, should be a child element of the document body -->
+<div id="blueimp-gallery" class="blueimp-gallery">
+    <!-- The container for the modal slides -->
+    <div class="slides"></div>
+    <!-- Controls for the borderless lightbox -->
+    <h3 class="title"></h3>
+    <a class="prev">‹</a>
+    <a class="next">›</a>
+    <a class="close">×</a>
+    <a class="play-pause"></a>
+    <ol class="indicator"></ol>
+    <!-- The modal dialog, which will be used to wrap the lightbox content -->
+    <div class="modal fade">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <button type="button" class="close" aria-hidden="true">&times;</button>
+                    <h4 class="modal-title"></h4>
+                </div>
+                <div class="modal-body next"></div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-default pull-left prev">
+                        <i class="glyphicon glyphicon-chevron-left"></i>
+                        Previous
+                    </button>
+                    <button type="button" class="btn btn-primary next">
+                        Next
+                        <i class="glyphicon glyphicon-chevron-right"></i>
+                    </button>
+                </div>
+            </div>
+        </div>²
+    </div>
+</div>
+
+
+<div id="links">
+    <a href="pics/garten.jpg" title="Garten(gross)" data-gallery>
+        <img src="pics/garten.jpg" alt="Garten(gross)" width="200" height="150">
+    </a>
+    <a href="pics/garten2.jpg" title="Garten(closeup)" data-gallery>
+        <img src="pics/garten2.jpg" alt="Garten(closeup)" width="200" height="150">
+    </a>
+    <a href="pics/garten3.jpg" title="Garten(closeup histop)" data-gallery>
+        <img src="pics/garten3.jpg" alt="Garten(closeup histop)" width="200" height="150">
+    </a>
+    <a href="pics/lense.jpg" title="Lense(wide)" data-gallery>
+        <img src="pics/lense.jpg" alt="Lense(wide)" width="200" height="150">
+    </a>
+    <a href="pics/lense2.jpg" title="Lense(tele)" data-gallery>
+        <img src="pics/lense2.jpg" alt="Lense(tele)" width="200" height="150">
+    </a>
+    <a href="pics/lense3.jpg" title="Lense(wide&tele)" data-gallery>
+        <img src="pics/lense3.jpg" alt="Lense(wide&tele)" width="200" height="150">
+    </a>
+</div>
+
+
+<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
+<script src="http://blueimp.github.io/Gallery/js/jquery.blueimp-gallery.min.js"></script>
+<script src="js/bootstrap-image-gallery.min.js"></script>
+
+</body>
+</html>
