Added rats page

--- a/rats.html
+++ b/rats.html
@@ -9,7 +9,7 @@
     <meta name="author" content="">
     <link rel="icon" href="../../favicon.ico">
 
-    <title>Sansoucci</title>
+    <title>The cuties</title>
 
     <!-- Bootstrap core CSS -->
     <link rel="stylesheet" href="http://netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.min.css">
@@ -40,8 +40,8 @@
 
 
       <div class="jumbotron">
-        <h1>One perfect day in [sɑn'su't͡ʃi]</h1>
-        <p class="lead">Spaziergang durch den schönen Park - zur Orangerie. <br>Dann noch durch die Innenstadt von Potsdam.</p>
+        <h1>Cute, intelligent - Rats! </h1>
+        <p class="lead">Human fellow for ages. <br>Was loathed and hunted - and never lost their smiles.</p>
       </div>
 
       <div class="row marketing">
@@ -82,24 +82,20 @@
 
 
         <div id="links">
-            <a href="pics/sansou1407/01.jpg"  data-gallery> <img src="pics/sansou1407/thumbs100/01.jpg"> </a>
-            <a href="pics/sansou1407/02.jpg"  data-gallery> <img src="pics/sansou1407/thumbs100/02.jpg"> </a>
-            <a href="pics/sansou1407/03.jpg"  data-gallery> <img src="pics/sansou1407/thumbs100/03.jpg"> </a>
-            <a href="pics/sansou1407/04.jpg"  data-gallery> <img src="pics/sansou1407/thumbs100/04.jpg"> </a>
-            <a href="pics/sansou1407/05.jpg"  data-gallery> <img src="pics/sansou1407/thumbs100/05.jpg"> </a>
-            <a href="pics/sansou1407/06.jpg"  data-gallery> <img src="pics/sansou1407/thumbs100/06.jpg"> </a>
-            <a href="pics/sansou1407/07.jpg"  data-gallery> <img src="pics/sansou1407/thumbs100/07.jpg"> </a>
-            <a href="pics/sansou1407/08.jpg"  data-gallery> <img src="pics/sansou1407/thumbs100/08.jpg"> </a>
-            <a href="pics/sansou1407/09.jpg"  data-gallery> <img src="pics/sansou1407/thumbs100/09.jpg"> </a>
-            <a href="pics/sansou1407/10.jpg"  data-gallery> <img src="pics/sansou1407/thumbs100/10.jpg"> </a>
-            <a href="pics/sansou1407/11.jpg"  data-gallery> <img src="pics/sansou1407/thumbs100/11.jpg"> </a>
-            <a href="pics/sansou1407/12.jpg"  data-gallery> <img src="pics/sansou1407/thumbs100/12.jpg"> </a>
-            <a href="pics/sansou1407/13.jpg"  data-gallery> <img src="pics/sansou1407/thumbs100/13.jpg"> </a>
-            <a href="pics/sansou1407/14.jpg"  data-gallery> <img src="pics/sansou1407/thumbs100/14.jpg"> </a>
-            <a href="pics/sansou1407/15.jpg"  data-gallery> <img src="pics/sansou1407/thumbs100/15.jpg"> </a>
-            <a href="pics/sansou1407/16.jpg"  data-gallery> <img src="pics/sansou1407/thumbs100/16.jpg"> </a>
-            <a href="pics/sansou1407/17.jpg"  data-gallery> <img src="pics/sansou1407/thumbs100/17.jpg"> </a>
-            <a href="pics/sansou1407/18.jpg"  data-gallery> <img src="pics/sansou1407/thumbs100/18.jpg"> </a>
+            <a href="pics/rats01/01.jpg"  data-gallery> <img src="pics/rats01/thumbs200/01.jpg"> </a>
+            <a href="pics/rats01/02.jpg"  data-gallery> <img src="pics/rats01/thumbs200/02.jpg"> </a>
+            <a href="pics/rats01/03.jpg"  data-gallery> <img src="pics/rats01/thumbs200/03.jpg"> </a>
+            <a href="pics/rats01/04.jpg"  data-gallery> <img src="pics/rats01/thumbs200/04.jpg"> </a>
+            <a href="pics/rats01/05.jpg"  data-gallery> <img src="pics/rats01/thumbs200/05.jpg"> </a>
+            <a href="pics/rats01/06.jpg"  data-gallery> <img src="pics/rats01/thumbs200/06.jpg"> </a>
+            <a href="pics/rats01/07.jpg"  data-gallery> <img src="pics/rats01/thumbs200/07.jpg"> </a>
+            <a href="pics/rats01/08.jpg"  data-gallery> <img src="pics/rats01/thumbs200/08.jpg"> </a>
+            <a href="pics/rats01/09.jpg"  data-gallery> <img src="pics/rats01/thumbs200/09.jpg"> </a>
+            <a href="pics/rats01/10.jpg"  data-gallery> <img src="pics/rats01/thumbs200/10.jpg"> </a>
+            <a href="pics/rats01/19.jpg"  data-gallery> <img src="pics/rats01/thumbs200/19.jpg"> </a>
+            <a href="pics/rats01/20.jpg"  data-gallery> <img src="pics/rats01/thumbs200/20.jpg"> </a>
+            <a href="pics/rats01/22.jpg"  data-gallery> <img src="pics/rats01/thumbs200/22.jpg"> </a>
+            <a href="pics/rats01/24.jpg"  data-gallery> <img src="pics/rats01/thumbs200/24.jpg"> </a>
 
         </div>
 
